--- a/x-pack/libbeat/autodiscover/providers/aws/elb/_meta/fields.yml
+++ b/x-pack/libbeat/autodiscover/providers/aws/elb/_meta/fields.yml
@@ -1,14 +1,14 @@
 - key: elb_listener
   title: "ELB Listener"
   description: >
-    ELB Listeners
+    AWS ELB Listeners
   short_config: false
   release: experimental
   fields:
     - name: elb_listener
       type: group
       description: >
-          jolokia contains metrics exposed via jolokia agent
+          Represents an AWS ELB Listener, e.g. a port on an ELB.
       fields:
         - name: ip_address_type
           type: keyword
