--- a/x-pack/metricbeat/metricbeat.reference.yml
+++ b/x-pack/metricbeat/metricbeat.reference.yml
@@ -202,8 +202,7 @@ metricbeat.modules:
           value: i-0686946e22cf9494a
     - namespace: AWS/EBS
     - namespace: AWS/ELB
-      resource_type_filters:
-        - elasticloadbalancing
+      resource_type_filter: elasticloadbalancing
   #regions:
   #  - us-east-1
   #  - us-east-2
