--- a/metricbeat/metricbeat.reference.yml
+++ b/metricbeat/metricbeat.reference.yml
@@ -156,7 +156,7 @@ metricbeat.modules:
   # Password of hosts. Empty by default
   #password: password
 
-#-------------------------------- Beats Module -------------------------------
+#-------------------------------- Beat Module --------------------------------
 - module: beats
   metricsets:
     - stats
