--- a/heartbeat/heartbeat.yml
+++ b/heartbeat/heartbeat.yml
@@ -39,6 +39,131 @@ setup.template.settings:
   index.codec: best_compression
   #_source.enabled: false
 
+setup.data_frame:
+  transforms:
+    - pivot:
+        group_by:
+          monitor_id: {"terms": {"field": "monitor.id"}}
+      aggregations:
+        state:
+          scripted_metric: |
+            // Globals are values that should be identical across all docs
+            // We can cheat a bit by always overwriting these and make the
+            // assumption that there is no variation in these across checks
+            state.globals = new HashMap();
+            // Here we store stuff broken out by agent.id and monitor.id
+            // This should correspond to a unique check.
+            state.checksByAgentIdIP = new HashMap();
+          map_script: |
+            Map curCheck = new HashMap();
+            String agentId = doc["agent.id"][0];
+            String ip = doc["monitor.ip"][0];
+            String agentIdIP = agentId + "-" + ip.toString();
+            def ts = doc["@timestamp"][0].toInstant().toEpochMilli();
+
+            def lastCheck = state.checksByAgentIdIP[agentId];
+            Long lastTs = lastCheck != null ? lastCheck["@timestamp"] : null;
+            if (lastTs != null && lastTs > ts) {
+              return;
+            }
+
+            curCheck.put("@timestamp", ts);
+
+            Map agent = new HashMap();
+            agent.id = agentId;
+            curCheck.put("agent", agent);
+
+            if (state.globals.url == null) {
+              Map url = new HashMap();
+              Collection fields = ["full", "original", "scheme", "username", "password", "domain", "port", "path", "query", "fragment"];
+              url.full = doc["url.full"];
+              for (field in fields) {
+                String docPath = "url." + field;
+                def val = doc[docPath];
+                if (!val.isEmpty()) {
+                  url[field] = val[0];
+                }
+              }
+              state.globals.url = url;
+            }
+
+            Map monitor = new HashMap();
+            monitor.status = doc["monitor.status"][0];
+            monitor.ip = ip;
+            def monitorName = doc["monitor.name"][0];
+            if (monitorName != "") {
+              monitor.name = monitorName;
+            }
+            curCheck.monitor = monitor;
+
+            if (curCheck.observer == null) {
+              curCheck.observer = new HashMap();
+            }
+            if (curCheck.observer.geo == null) {
+              curCheck.observer.geo = new HashMap();
+            }
+            if (!doc["observer.geo.name"].isEmpty()) {
+              curCheck.observer.geo.name = doc["observer.geo.name"][0];
+            }
+            if (!doc["observer.geo.location"].isEmpty()) {
+              curCheck.observer.geo.location = doc["observer.geo.location"][0];
+            }
+
+            state.checksByAgentIdIP[agentIdIP] = curCheck;
+          combine_script: ""
+          reduce_script: |
+            // The final document
+            Map result = new HashMap();
+
+            Map checks = new HashMap();
+            long maxTs = 0;
+            Collection ips = new HashSet();
+            Collection geoNames = new HashSet();
+            for (state in states) {
+              result.putAll(state.globals);
+              for (entry in state.checksByAgentIdIP.entrySet()) {
+                def agentIdIP = entry.getKey();
+                def check = entry.getValue();
+                def lastBestCheck = checks.get(agentIdIP);
+                def checkTs = check.get("@timestamp");
+
+                if (maxTs < checkTs) { maxTs = checkTs}
+
+                if (lastBestCheck == null || lastBestCheck.get("@timestamp") < checkTs) {
+                  checks[agentIdIP] = check
+                }
+
+
+                ips.add(check.monitor.ip);
+                if (check.observer != null && check.observer.geo != null && check.observer.geo.name != null) {
+                  geoNames.add(check.observer.geo.name);
+                }
+              }
+            }
+
+            // We just use the values so we can store these as nested docs
+            result.checks = checks.values();
+            result.put("@timestamp", maxTs);
+
+
+            Map summary = new HashMap();
+            summary.up = checks.entrySet().stream().filter(c -> c.getValue().status == "up").count();
+            summary.down = checks.size() - summary.up;
+            result.summary = summary;
+
+            Map monitor = new HashMap();
+            monitor.ip = ips;
+            monitor.status = summary.down > 0 ? (summary.up > 0 ? "mixed": "down") : "up";
+            result.monitor = monitor;
+
+            Map observer = new HashMap();
+            Map geo = new HashMap();
+            geo.name = geoNames;
+            result.observer = observer;
+            result.geo = geo;
+
+            return result;
+
 #================================ General =====================================
 
 # The name of the shipper that publishes the network data. It can be used to group
