--- a/metricbeat/module/kubernetes/kubecontroller/_meta/fields.yml
+++ b/metricbeat/module/kubernetes/kubecontroller/_meta/fields.yml
@@ -2,10 +2,119 @@
   type: group
   description: >
     Kubernetes controller manager metrics
-  release: beta
+  release: ga
   fields:
-
-    - name: TODO
-      type: group
+    - name: handler
+      type: keyword
       description: >
-        TODO
+        Request handler
+    - name: code
+      type: keyword
+      description: >
+        HTTP code
+    - name: method
+      type: keyword
+      description: >
+        HTTP method
+    - name: host
+      type: keyword
+      description: >
+        Request host
+    - name: name
+      type: keyword
+      description: >
+        Name for the resource
+    - name: zone
+      type: keyword
+      description: >
+        Infrastructure zone
+
+    - name: process
+      type: group
+      fields:
+        - name: cpu.sec
+          type: scaled_float
+          description: CPU seconds
+        - name: memory.resident.bytes
+          type: long
+          description: Bytes in resident memory
+        - name: memory.virtual.bytes
+          type: long
+          description: Bytes in virtual memory
+        - name: fds.open.count
+          type: integer
+          description: Number of open file descriptors
+        - name: started.sec
+          type: scaled_float
+          description: Seconds since the process started
+
+    - name: http
+      type: group
+      fields:
+        - name: request.duration.us.percentile.*
+          type: scaled_float
+          description: Request duration microseconds percentiles
+        - name: request.duration.us.sum
+          type: scaled_float
+          description: Request duration microseconds cumulative sum
+        - name: request.duration.us.count
+          type: long
+          description: Request count for duration
+        - name: request.size.bytes.percentile.*
+          type: integer
+          description: Request size percentiles
+        - name: request.size.bytes.sum
+          type: long
+          description: Request size cumulative sum
+        - name: request.size.bytes.count
+          type: long
+          description: Request count for size
+        - name: response.size.bytes.percentile.*
+          type: integer
+          description: Response size percentiles
+        - name: response.size.bytes.sum
+          type: long
+          description: Response size cumulative sum
+        - name: response.size.bytes.count
+          type: long
+          description: Response count
+        - name: request.count
+          type: long
+          description: Request count for response
+
+    - name: client.request.count
+      type: long
+      description: >
+        Number of requests as client
+
+    - name: workqueue
+      type: group
+      fields:
+        - name: longestrunning.sec
+          type: scaled_float
+          description: Longest running processors
+        - name: unfinished.sec
+          type: scaled_float
+          description: Unfinished processors
+
+    - name: node.collector
+      type: group
+      fields:
+        - name: eviction.count
+          type: long
+          description: Number of node evictions
+        - name: unhealthy.count
+          type: long
+          description: Number of unhealthy nodes
+        - name: count
+          type: long
+          description: Number of nodes
+        - name: health.pct
+          type: integer
+          description: Percentage of healthy nodes
+
+    - name: leader.is_master
+      type: int
+      description: >
+        Whether the node is master
+
