--- a/metricbeat/module/kubernetes/_meta/config.reference.yml
+++ b/metricbeat/module/kubernetes/_meta/config.reference.yml
@@ -54,3 +54,10 @@
   metricsets:
     - apiserver
   hosts: ["https://${KUBERNETES_SERVICE_HOST}:${KUBERNETES_SERVICE_PORT}"]
+
+# Kubernetes controller manager
+- module: kubernetes
+  enabled: true
+  metricsets:
+    - kubecontroller
+  hosts: ["http://kube-controller-manager:10252"]
