mage fmt update

--- a/x-pack/metricbeat/metricbeat.reference.yml
+++ b/x-pack/metricbeat/metricbeat.reference.yml
@@ -513,6 +513,13 @@ metricbeat.modules:
     - apiserver
   hosts: ["https://${KUBERNETES_SERVICE_HOST}:${KUBERNETES_SERVICE_PORT}"]
 
+# Kubernetes controller manager
+- module: kubernetes
+  enabled: true
+  metricsets:
+    - kubecontroller
+  hosts: ["http://kube-controller-manager:10252"]
+
 #--------------------------------- Kvm Module ---------------------------------
 - module: kvm
   metricsets: ["dommemstat"]
