--- a/metricbeat/module/kubernetes/_meta/config.reference.yml
+++ b/metricbeat/module/kubernetes/_meta/config.reference.yml
@@ -59,5 +59,5 @@
 - module: kubernetes
   enabled: true
   metricsets:
-    - kubecontroller
-  hosts: ["http://kube-controller-manager:10252"]
+    - controllermanager
+  hosts: ["http://controller-manager:10252"]
