--- a/x-pack/metricbeat/module/aws/_meta/config.yml
+++ b/x-pack/metricbeat/module/aws/_meta/config.yml
@@ -43,7 +43,7 @@
           value: i-0686946e22cf9494a
     - namespace: AWS/EBS
     - namespace: AWS/ELB
-      resource_type_filter: elasticloadbalancing
+      tags.resource_type_filter: elasticloadbalancing
   #regions:
   #  - us-east-1
   #  - us-east-2
